[gd_scene load_steps=3 format=3 uid="uid://c8yvxr1yvqnbx"]

[ext_resource type="Script" path="res://scripts/test/effect_test.gd" id="1_ixnqj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yjnqw"]
radius = 20.0

[node name="EffectTest" type="Node2D"]
script = ExtResource("1_ixnqj")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameEffectButton" type="Button" parent="UI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "游戏效果"

[node name="VisualEffectButton" type="Button" parent="UI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "视觉效果"

[node name="CombinedEffectButton" type="Button" parent="UI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "组合效果"

[node name="ClearButton" type="Button" parent="UI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "清除效果"

[node name="BackButton" type="Button" parent="UI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "返回"

[node name="TestTarget" type="Area2D" parent="."]
position = Vector2(576, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestTarget"]
shape = SubResource("CircleShape2D_yjnqw")

[node name="Sprite2D" type="Sprite2D" parent="TestTarget"]
scale = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="TestTarget"]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = -24.0
text = "测试目标"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[connection signal="pressed" from="UI/Panel/HBoxContainer/GameEffectButton" to="." method="_on_game_effect_button_pressed"]
[connection signal="pressed" from="UI/Panel/HBoxContainer/VisualEffectButton" to="." method="_on_visual_effect_button_pressed"]
[connection signal="pressed" from="UI/Panel/HBoxContainer/CombinedEffectButton" to="." method="_on_combined_effect_button_pressed"]
[connection signal="pressed" from="UI/Panel/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="UI/Panel/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
